...
"WizardCollectionViewController.Page.copytoInterpret.titleText" = "Copy to Interpret";

"WizardCollectionViewController.Page.importPublicKeys.detailText" = "You can import OpenPGP public keys\nby tapping \"+\" button in Contacts view\n and pasting in the full public key.";
"WizardCollectionViewController.Page.typeAndEncrypt.detailText" = "With Tessercube Keyboard, after\ntyping a message, you can tap the\n\"tesseract\" icon and select recipeints\nto encrypt for them.";
"WizardCollectionViewController.Page.copytoInterpret.detailText" = "Copy an encrypted message in a chat\nview to interpret the message. You\ncan also tap the \"Key\" icon in text edit\narea to interpret the text in the field.";

"IntroWizardViewController.Action.Button.skipGuides" = "Skip Guides";
"IntroWizardViewController.Action.Button.notNow" = "Not Now";

"IntroWizardViewController.Step.contactsScene" = "This is where you manage your contacts.";
"IntroWizardViewController.Step.importContact" = "Tap \"+\" to import a contact with their public key.";
"IntroWizardViewController.Step.messagesScene" = "This is where you manage your message history.";
"IntroWizardViewController.Step.composeMessage" = "Tap \"Compose\" to encrypt a message or create a signature; or both.";
...
"IntroWizardViewController.Step.completeGuide" = "🎉 Guide Completed 🎉\nCreate a keypair right now?";

"ContactDetailViewController.Label.Fingerprint" = "Fingerprint";
"ContactDetailViewController.Label.Validity" = "Validity";
"ContactDetailViewController.Label.Keytype" = "Type";
"ContactDetailViewController.Label.CreatedAt" = "Created at";
"ContactDetailViewController.Label.Email" = "Email";
"ContactDetailViewController.Label.InvalidFingerprint" = "Invalid Fingerprint";
"ContactDetailViewController.Label.Valid" = "Valid";
"ContactDetailViewController.Label.Invalid" = "Invalid";
"ContactDetailViewController.Button.SendMessage" = "Send Message";
"ContactDetailViewController.Button.ExportPubKey" = "Export Full Public Key";

"EditContactViewController.Label.DeleteContact" = "Delete Contact";
"EditContactViewController.Action.Button.ConfirmDeleteContact" = "Would you like to delete this contact?";
"EditContactViewController.Action.Button.ConfirmDeleteKeypairs" = "Would you like to keep the public key of this contact?";
"EditContactViewController.Action.Button.KeepPublicKey" = "Keep Public Key";
"EditContactViewController.Action.Button.DeleteKeyPair" = "Delete Key Pairs";
"EditContactViewController.EditType.Name" = "Name";
"EditContactViewController.EditType.Trust" = "Trust";

"MainTabbarViewController.TabBarItem.Contacts.title" = "Contacts";
"MainTabbarViewController.TabBarItem.Messages.title" = "Messages";
"MainTabbarViewController.TabBarItem.Me.title" = "Me";

"MessagesViewController.SegmentedControl.timeline" = "Timeline";
"MessagesViewController.SegmentedControl.savedDrafts" = "Saved Drafts";
"MessagesViewController.EmptyView.Prompt" = "No message yet.\nYou can compose and interpret messages.\nMessages composed and interpreted in\nTessercube keyboard will appear here.";
"MessagesViewController.EmptyView.SearchingPrompt" = "No message.";
"MessagesViewController.Action.Button.Compose" = "Compose";
...
"InterpretMessageViewModel.Alert.Message.BadPayload" = "The message payload is invalid.\nPlease verify again.";

"MeViewController.KeyCardCell.Label.NoKeyYet" = "No keypair yet";
"MeViewController.KeyCardCell.Label.InvalidFingerprint" = "Invalid Fingerprint";

"MeViewController.Action.Prompt" = "Create or import a key to start using.";
"MeViewController.Action.Button.CreateKey" = "Create Keypair";
"MeViewController.Action.Button.ImportKey" = "Import Keypair";
"MeViewController.Action.Button.ScanQR" = "Scan QR Code";
"MeViewController.Action.Button.Settings" = "Settings";
"MeViewController.Action.Button.ConfirmDeleteKey" = "Yes, Delete ";

"SettingsViewController.Title" = "Settings";
"SettingsViewController.TableView.Header.Keyboard" = "Keyboard";
...
"ImportKeyController.Action.Button.PastePrivateKey" = "Paste Private Key";
"ImportKeyController.Action.Button.ScanQR" = "Scan QR Code";
"ImportKeyController.Action.Button.MaybeLater" = "Maybe Later";

"PasteKeyViewController.Title.PastePrivateKey" = "Paste Private Key";
"PasteKeyViewController.Title.ImportPublicKey" = "Import Public Key";
"PasteKeyViewController.Placeholder.Password" = "Password";
"PasteKeyViewController.Alert.Title.Notice" = "Notice";
"PasteKeyViewController.Alert.Message.ImportAsPublicKey" = "This keypair contains private key part. Continue importing will only import the public key part";
"PasteKeyViewController.Alert.Message.noPublicKey" = "Cannot parse public key armor.\nPlease try again";
"PasteKeyViewController.Alert.Button.Continue" = "Continue";

"MeViewController.Action.Button.Export" = "Export Private Key";
"MeViewController.Action.Button.Share" = "Share Public Key";

"CreateNewKeyViewController.Label.Name" = "Name";
"CreateNewKeyViewController.Label.Email" = "Email";
"CreateNewKeyViewController.Label.Password" = "Password";
"CreateNewKeyViewController.Label.ConfirmPassword" = "Confirm Password";
"CreateNewKeyViewController.Label.Easymode" = "Easy Mode";
"CreateNewKeyViewController.Label.Algorithm" = "Algorithm";
"CreateNewKeyViewController.Label.KeyLength" = "Key Length";

"CreateNewKeyViewController.Alert.Title.NameRequired" = "Name is required to create a key";
"CreateNewKeyViewController.Alert.Title.NameInvalid" = "Name cannot contain the following characters: <>()";
"CreateNewKeyViewController.Alert.Title.EmailRequired" = "Email is required to create a key";
"CreateNewKeyViewController.Alert.Title.EmailInvalid" = "Please input a valid email address";
"CreateNewKeyViewController.Alert.Title.PasswordNotMatch" = "Confirm password should be same as password";

"ImportPublicKeyConfirmViewController.Title.NewContact" = "New Contact";
"ImportPublicKeyConfirmViewController.Label.Availability" = "Availability";
"ImportPublicKeyConfirmViewController.Label.notAdded" = "Not Added Yet";
"ImportPublicKeyConfirmViewController.Label.IsPartialAddedOneKeyNew" = "One new key can be added";
"ImportPublicKeyConfirmViewController.Label.IsPartialAddedMultipleKeysNew" = "%d new keys can be added";
"ImportPublicKeyConfirmViewController.Label.IsAdded" = "Already added";
"ImportPublicKeyConfirmViewController.Label.ContactsAddedSuccessfully" = "Contacts Added Successfully";
"ImportPublicKeyConfirmViewController.Button.AddContact" = "Add Contact";
"ImportPublicKeyConfirmViewController.Button.Close" = "Close";

"ImportPrivateKeyConfirmViewController.Title.NewPrivateKey" = "New Private Key";
"ImportPrivateKeyConfirmViewController.Label.Availability" = "Availability";
"ImportPrivateKeyConfirmViewController.Label.NotAdded" = "Not Added Yet";
"ImportPrivateKeyConfirmViewController.Label.IsPartialAdded" = "Partial Added";
"ImportPrivateKeyConfirmViewController.Label.IsAdded" = "Already Added";
"ImportPrivateKeyConfirmViewController.Label.PrivateKeyAddedSuccessfully" = "Private Keys Imported Successfully";
"ImportPrivateKeyConfirmViewController.Button.ImportPrivateKey" = "Import Private Key";
"ImportPrivateKeyConfirmViewController.Button.UpdateKeypair" = "Update Keypair";
"ImportPrivateKeyConfirmViewController.Button.Close" = "Close";

"SharePosterController.Title" = "Share Public Key";
...
